tests/snapshots/run_wpt_conformance__trtx_where_float32_4D_tensors_only_broadcast_condition_2D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "where.https.any.js",
    "where float32 4D tensors only broadcast condition 2D to 4D",
    "trtx",
    "PASS",
)
